build.sh script working